swagger generated files based on spec, and implemented github oauth
